compiler/src/test/resources/amyc/typer/failing/ArithError1.amy
object ArithError1
  1 + true
end ArithError1
